@@ -31,6 +31,7 @@ int hestElideMultipleNonExistFloatDefault = AIR_FALSE;
 int hestElideSingleEmptyStringDefault = AIR_FALSE;
 int hestElideMultipleEmptyStringDefault = AIR_FALSE;
 int hestGreedySingleString = AIR_TRUE;
+int hestCleverPluralizeOtherY = AIR_FALSE;
 char hestRespFileFlag = '@';
 char hestRespFileComment = '#';
 char hestVarParamStopFlag = '-';
